syntax = "proto3";
package pagination;

option go_package = "pb";

message PageInfo {
	string start_cursor = 2;
	string end_cursor = 4;
	bool has_next_page = 1;
	bool has_previous_page = 3;
}

message PaginationRequest {
	int64 first = 1;
	string after = 2;
	int64 last = 3;
	string before = 4;
}